# EmuCoreX

./: .gitattributes  .gitignore  README.md  gradle.properties  jit_profile.txt
.github/workflows/: build.yml
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/vulkan_wrappers/android_stub/: SOURCE.txt
app/src/main/assets/vulkan_wrappers/bionic/: SOURCE.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ARM_ANDROID/: CMakeLists.txt
app/src/main/cpp/ARM_ANDROID/include/: xxhash.h
app/src/main/cpp/ARM_ANDROID/include/emucorex/: android_crash_diagnostics.h  android_network_adapters.h  android_posix_compat.h  android_runtime.h  native_profiler.h  retro_achievements_android.h  upstream_vm_bridge.h
app/src/main/cpp/ARM_ANDROID/src/integration/: COMPLIANCE.md  README.md  pcsx2_achievements_android.cpp  retro_achievements_android.cpp
app/src/main/cpp/ARM_ANDROID/src/jni/: native_app_jni.cpp  support_jni.cpp
app/src/main/cpp/ARM_ANDROID/src/platform/: android_aaudio_stream.cpp  android_disc_io.cpp  android_dynamic_library.cpp  android_gl_context.cpp  android_hostsys.cpp  android_misc.cpp  android_network_adapters.cpp  android_opensles_stream.cpp  android_pcap_unavailable.cpp  android_posix_compat.cpp  android_sdl_input_source.cpp  shaderc_shared_anchor.cpp
app/src/main/cpp/ARM_ANDROID/src/platform/vulkan/: android_gs_device_vk.cpp  android_vk_swap_chain.cpp
app/src/main/cpp/ARM_ANDROID/src/runtime/: android_crash_diagnostics.cpp  android_host_services.cpp  android_input_services.cpp  android_runtime.cpp  native_profiler.cpp  upstream_vm_bridge.cpp
app/src/main/cpp/pcsx2/: .gitignore  PCSX2_qt.sln
app/src/main/cpp/pcsx2/cmake/: SearchForStuff.cmake
app/src/main/cpp/pcsx2/common/: Assertions.cpp  CMakeLists.txt  CrashHandler.cpp  FileSystem.cpp  FileSystem.h  HTTPDownloaderCurl.cpp  HTTPDownloaderCurl.h  HostSys.cpp  Semaphore.cpp  Threading.h
app/src/main/cpp/pcsx2/common/Darwin/: DarwinMisc.cpp
app/src/main/cpp/pcsx2/common/Linux/: LnxHostSys.cpp  LnxThreads.cpp
app/src/main/cpp/pcsx2/common/emitter/: x86emitter.cpp  x86types.h
app/src/main/cpp/pcsx2/pcsx2/: Achievements.cpp  Achievements.h  CMakeLists.txt  COP0.cpp  Cache.cpp  Cache.h  Config.h  Counters.cpp  FPU.cpp  GS.cpp  GS.h  Gif_Unit.h  HangTrace.cpp  HangTrace.h  Host.cpp  Hotkeys.cpp  Interpreter.cpp  IopCounters.cpp  JitProfiler.cpp  JitProfiler.h  MMI.cpp  MTGS.cpp  MTGS.h  MTVU.cpp  MTVU.h  Memory.cpp  Memory.h  Patch.cpp  Pcsx2Config.cpp  PerformanceMetrics.cpp  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R5900.cpp  R5900.h  R5900OpcodeImpl.cpp  R5900OpcodeTables.cpp  R5900OpcodeTables.h  VMManager.cpp  VMManager.h  (+14 more)
app/src/main/cpp/pcsx2/pcsx2-qt/Settings/: EmulationSettingsWidget.cpp  GraphicsAdvancedSettingsTab.ui  GraphicsHardwareRenderingSettingsTab.ui  GraphicsSettingsWidget.cpp
app/src/main/cpp/pcsx2/pcsx2/DEV9/: AdapterUtils.cpp  LocalLinkAdapter.cpp  LocalLinkAdapter.h  net.cpp
app/src/main/cpp/pcsx2/pcsx2/GS/: GS.cpp  GSClut.cpp  GSState.cpp  GSState.h  GSUtil.cpp
app/src/main/cpp/pcsx2/pcsx2/Host/: AudioStream.cpp  AudioStream.h  AudioStreamTypes.h
app/src/main/cpp/pcsx2/pcsx2/ImGui/: FullscreenUI.cpp  FullscreenUI_Settings.cpp  ImGuiManager.cpp  ImGuiOverlays.cpp
app/src/main/cpp/pcsx2/pcsx2/Input/: InputManager.cpp  InputSource.cpp  SDLInputSource.h
app/src/main/cpp/pcsx2/pcsx2/SPU2/: Mixer.cpp  spu2.cpp  spu2.h
app/src/main/cpp/pcsx2/pcsx2/arm64/: OaknutHelpers-arm64.cpp  OaknutHelpers-arm64.h  OaknutHelpers.cpp  OaknutHelpers.h  Vif_Dynarec.cpp  Vif_UnpackNEON.cpp  (+3 more)
app/src/main/cpp/vulkan_wrapper_shims/: libcutils_shim.c  libhardware_shim.c  libnativewindow_shim.c
app/src/main/res/drawable/: ic_controller_a_button.xml  ic_controller_analog_base.xml  ic_controller_analog_button.xml  ic_controller_analog_stick.xml  ic_controller_b_button.xml  ic_controller_c_button.xml  ic_controller_calibrate_button.xml  ic_controller_circle_button.xml  ic_controller_cross_button.xml  ic_controller_down_button.xml  ic_controller_l1_button.xml  ic_controller_l2_button.xml  ic_controller_l3_button.xml  ic_controller_left_button.xml  ic_controller_m1_button.xml  ic_controller_m2_button.xml  ic_controller_m3_button.xml  ic_controller_m4_button.xml  ic_controller_pause_button.xml  ic_controller_pressure_modifier.xml  ic_controller_quick_load_button.xml  ic_controller_quick_save_button.xml  ic_controller_r1_button.xml  ic_controller_r2_button.xml  ic_controller_r3_button.xml  ic_controller_right_button.xml  ic_controller_select_button.xml  ic_controller_square_button.xml  ic_controller_start_button.xml  ic_controller_toggle_slowmo.xml  ic_controller_toggle_speed_limit.xml  ic_controller_toggle_turbo.xml  ic_controller_triangle_button.xml  ic_controller_up_button.xml  ic_launcher_pro_background.xml  ic_launcher_pro_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_pro_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
docs/: android-16kb-page-support.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
release/: output-metadata.json
release/baselineProfiles/0/: app-release.dm
release/baselineProfiles/1/: app-release.dm
(+326 files in other folders)
